# Hermes-agent-switch

./: .gitignore  FUTURE_UPDATES.md  IMPLEMENTATION_PLAN.md  README.md  package.json  pnpm-lock.yaml  tailwind.config.cjs  vite.config.ts
.github/workflows/: build-macos.yml  release-all.yml  release.yml
src/: App.tsx  index.css  main.tsx
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/icons/: icon.icns
src-tauri/src/: lib.rs  main.rs
src/components/common/: PlaceholderPage.tsx
src/components/config/: ConfigPage.tsx
src/components/layout/: Sidebar.tsx
src/components/mcp/: McpPage.tsx
src/components/memory/: MemoryPage.tsx
src/components/onboarding/: InstallPage.tsx  OnboardingPage.tsx  SetupWizard.tsx
src/components/providers/: ProvidersPage.tsx
src/components/settings/: SettingsPage.tsx
src/components/skills/: SkillsPage.tsx
src/components/terminal/: TerminalPage.tsx
src/lib/: api.ts  i18n.ts
