[package]
name = "hermes-switch"
version = "0.1.0"
description = "All-in-One management tool for Hermes Agent"
authors = ["HermesSwitch Team"]
edition = "2021"

[lib]
name = "hermes_switch_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
tauri-plugin-opener = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
serde_yaml = "0.9"
dirs = "6"
uuid = { version = "1", features = ["v4"] }
chrono = { version = "0.4", features = ["serde"] }
thiserror = "2"
log = "0.4"
